finally added contact form (but have not supported it yet). tweakted ui. made background image stretch to screen: still having image height issues if viewport gets too skinny

--- a/mysite/static/custom/custom.css
+++ b/mysite/static/custom/custom.css
@@ -53,9 +53,23 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 body {
     padding-top: 30px;
     color: white;
-    background-image: url("italy.jpeg");
-    background-position: 40% 40%;
-    background-attachment: fixed;
+}
+
+
+/* Fix for fixed size background image. Code from this stackoverflow thread:
+ * http://stackoverflow.com/questions/1150163/stretch-and-scale-a-css-image-in-the-background-with-css-only
+ */
+.background-image {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    left: 0;
+    top: 0; 
+    z-index: -1;
+}
+
+.stretch {
+  min-height: 100%;
 }
 
 /* Styling for primary page title */
@@ -68,9 +82,9 @@ body {
     color: white;
 }
 
-/**/
+/* Main gutter on left side of the page */
 .gutter {
-  width: 15%;
+  width: 25%;
   float: left;
   height: 1px;
 }
@@ -78,7 +92,7 @@ body {
 /* Box that contains main page content */
 .main-container {
     /* positioning */
-    width: 46%;
+    width: 40%;
     float: left;
     margin-bottom: 100px;
 
@@ -119,23 +133,6 @@ body {
     text-shadow: none;
 }
 
-img {
-    border-radius:0.5em;
-    box-shadow: 0px 0px 0.5em #000000;
-    max-width: 100%;
-}
-
-.photo-container {
-   width : 90%;
-   float: left;
-}
-
-.photo-gutter {
-  width: 5%;
-  float: left;
-  height: 1px;
-}
-
 p {
     font-size: 130%;
     line-height: 1.3em;
@@ -159,5 +156,17 @@ a {
     color: rgb(65, 221, 59);
 }
 
+form {
+  margin-left: 4%;
+}
+
+#message {
+  height: 10em;
+}
+
+#submit {
+  display: block;
+  color: rgb(31, 25, 25);
+}
 
 
